# Alice

./: CMakeLists.txt  Info.plist  NOTICE.md  README.md  Release.py  compile_commands 2.json
.github/workflows/: ci.yml
Documentation/Core/: Forward.md  Move.md  NullPointer.md  Stringify.md
Documentation/Meta/: AddLvalueReference.md  RemoveLvalueReference.md  RemovePointer.md
Documentation/Trait/: Function.md  NullPointer.md  PointeeSized.md  Pointer.md  Reference.md  Same.md  UnboundedArray.md  Void.md
Source/: Alice.cpp
Source/Clone/: Clone.hpp
Source/Convert/: From.hpp  Into.hpp
Source/Core/: Forward.hpp  Inline.hpp  Move.hpp  NoUniqueAddress.hpp  NullPointer.hpp  Safety.hpp  Size.hpp  Stringify.hpp  Template.hpp  Unevaluated.hpp
Source/Marker/: Sized.hpp
Source/Meta/: Conditional.hpp  Decay.hpp  RemoveConstant.hpp  RemoveExtents.hpp  RemoveLvalueReference.hpp  RemovePointer.hpp  RemoveReference.hpp  RemoveRvalueReference.hpp  RemoveVolatile.hpp  Underlying.hpp
Source/Operator/: Add.hpp  AddAssignment.hpp  Address.hpp  And.hpp  AndAssignment.hpp  Assignment.hpp  Comma.hpp  Division.hpp  DivisionAssignment.hpp  Equal.hpp  Greater.hpp  GreaterEqual.hpp  Indirection.hpp  Less.hpp  LessEqual.hpp  LogicalAnd.hpp  LogicalNot.hpp  LogicalOr.hpp  Modulo.hpp  ModuloAssignment.hpp  Multiply.hpp  MultiplyAssignment.hpp  Not.hpp  Or.hpp  OrAssignment.hpp  PostDecrement.hpp  PostIncrement.hpp  PreDecrement.hpp  PreIncrement.hpp  ShiftLeft.hpp  ShiftLeftAssignment.hpp  ShiftRight.hpp  ShiftRightAssignment.hpp  StructureDereferenceIndirection.hpp  Subscript.hpp  Subtract.hpp  SubtractAssignment.hpp  UnaryMinus.hpp  UnaryPlus.hpp  Unequal.hpp  (+2 more)
Source/Trait/: Abstract.hpp  Aggregate.hpp  Array.hpp  Base.hpp  BoundedArray.hpp  Callable.hpp  Cast.hpp  Class.hpp  Constant.hpp  Constructible.hpp  Convertible.hpp  CopyAssignable.hpp  CopyConstructible.hpp  CopyMaterializable.hpp  DefaultConstructible.hpp  Destructible.hpp  DirectMaterializable.hpp  Empty.hpp  Enumeration.hpp  Final.hpp  Function.hpp  ImplicitLifetime.hpp  Invocable.hpp  Layoutable.hpp  LvalueReference.hpp  MemberFunctionPointer.hpp  MemberObjectPointer.hpp  MemberPointer.hpp  ModifierFunction.hpp  MoveAssignable.hpp  MoveConstructible.hpp  NullPointer.hpp  Object.hpp  ObserverFunction.hpp  PointeeSized.hpp  Pointer.hpp  Polymorphic.hpp  Reference.hpp  Referenceable.hpp  RvalueReference.hpp  (+18 more)
Test/Clone/: Clone.cpp
Test/Convert/: From.cpp  Into.cpp
Test/Core/: Forward.cpp  Inline.cpp  Move.cpp  NoUniqueAddress.cpp  NullPointer.cpp  Safety.cpp  Size.cpp  Stringify.cpp  Unevaluated.cpp
Test/Marker/: Sized.cpp
Test/Meta/: AddLvalueReference.cpp  AddRvalueReference.cpp  Conditional.cpp  Decay.cpp  RemoveConstant.cpp  RemoveExtents.cpp  RemoveLvalueReference.cpp  RemovePointer.cpp  RemoveReference.cpp  RemoveRvalueReference.cpp  RemoveVolatile.cpp  Underlying.cpp
Test/Operator/: Add.cpp  AddAssignment.cpp  Address.cpp  And.cpp  AndAssignment.cpp  Assignment.cpp  Comma.cpp  Division.cpp  DivisionAssignment.cpp  Equal.cpp  Greater.cpp  GreaterEqual.cpp  Indirection.cpp  Less.cpp  LessEqual.cpp  LogicalAnd.cpp  LogicalNot.cpp  LogicalOr.cpp  Modulo.cpp  ModuloAssignment.cpp  Multiply.cpp  MultiplyAssignment.cpp  Not.cpp  Or.cpp  OrAssignment.cpp  PostDecrement.cpp  PostIncrement.cpp  PreDecrement.cpp  PreIncrement.cpp  ShiftLeft.cpp  ShiftLeftAssignment.cpp  ShiftRight.cpp  ShiftRightAssignment.cpp  StructureDereferenceIndirection.cpp  Subscript.cpp  Subtract.cpp  SubtractAssignment.cpp  UnaryMinus.cpp  UnaryPlus.cpp  Unequal.cpp  (+2 more)
Test/Trait/: Abstract.cpp  Aggregate.cpp  Array.cpp  Base.cpp  BoundedArray.cpp  Callable.cpp  Cast.cpp  Class.cpp  Constant.cpp  Constructible.cpp  Convertible.cpp  CopyAssignable.cpp  CopyConstructible.cpp  CopyMaterializable.cpp  DefaultConstructible.cpp  Destructible.cpp  DirectMaterializable.cpp  Empty.cpp  Enumeration.cpp  Final.cpp  Function.cpp  ImplicitLifetime.cpp  Invocable.cpp  Layoutable.cpp  LvalueReference.cpp  MemberFunctionPointer.cpp  MemberObjectPointer.cpp  MemberPointer.cpp  ModifierFunction.cpp  MoveAssignable.cpp  MoveConstructible.cpp  NullPointer.cpp  Object.cpp  ObserverFunction.cpp  PointeeSized.cpp  Pointer.cpp  Polymorphic.cpp  Reference.cpp  Referenceable.cpp  RvalueReference.cpp  (+18 more)
