cmake_minimum_required(VERSION 4.2.3)
set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_EXPORT_COMPILE_COMMANDS on)
message(STATUS "Building on ${CMAKE_BUILD_TYPE} mode...")
if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    set(CMAKE_OSX_ARCHITECTURES arm64)
    project(Alice VERSION 0.0.1 LANGUAGES CXX OBJCXX)
else()
    project(Alice VERSION 0.0.1 LANGUAGES CXX)
endif()
set(ALICE_CLEAN create_symlink "${CMAKE_BINARY_DIR}/compile_commands.json" "${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json")
if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    set(ALICE_CLEAN ${ALICE_CLEAN} && rm -rf "${CMAKE_BINARY_DIR}/Alice.app/Contents/Resources")
    find_library(foundation Foundation)
    if(NOT foundation)
        message(FATAL_ERROR "Foundation not found")
    endif()
    find_library(appkit AppKit)
    if(NOT appkit)
        message(FATAL_ERROR "AppKit not found")
    endif()
    find_library(quartzcore QuartzCore)
    if(NOT quartzcore)
        message(FATAL_ERROR "QuartzCore not found")
    endif()
    find_library(metal Metal)
    if(NOT metal)
        message(FATAL_ERROR "Metal not found")
    endif()
    set(ALICE_RESOURCES_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/Resources/macOS")
    set(ALICE_SHADERS_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/Shader")
    file(GLOB_RECURSE ALICE_MACOS_RESOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Resources/macOS/*")
    file(GLOB_RECURSE ALICE_METAL_SHADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Shader/**.metal")
    file(GLOB_RECURSE ALICE_OBJCPP_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Source/**.mm")
    foreach(ALICE_FILE ${ALICE_MACOS_RESOURCES})
        file(RELATIVE_PATH ALICE_RESOURCE "${ALICE_RESOURCES_FOLDER}" "${ALICE_FILE}")
        get_filename_component(ALICE_RESOURCE_FILE "${ALICE_RESOURCE}" DIRECTORY)
        set_source_files_properties("${ALICE_FILE}" PROPERTIES MACOSX_PACKAGE_LOCATION "Resources/${ALICE_RESOURCE_FILE}")
    endforeach()
    foreach(ALICE_FILE ${ALICE_METAL_SHADERS})
        file(RELATIVE_PATH ALICE_RESOURCE "${ALICE_SHADERS_FOLDER}" "${ALICE_FILE}")
        get_filename_component(ALICE_RESOURCE_FILE "${ALICE_RESOURCE}" DIRECTORY)
        set_source_files_properties("${ALICE_FILE}" PROPERTIES MACOSX_PACKAGE_LOCATION "Resources/Shader/${ALICE_RESOURCE_FILE}")
    endforeach()
    add_executable(Alice MACOSX_BUNDLE ${ALICE_MACOS_RESOURCES} ${ALICE_METAL_SHADERS} ${ALICE_OBJCPP_SOURCES})
    set_target_properties(Alice PROPERTIES MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/Info.plist")
    target_link_libraries(Alice PRIVATE ${foundation} ${appkit} ${quartzcore} ${metal})
    target_compile_definitions(Alice PRIVATE alice_darwin=)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    add_executable(Alice WIN32)
    target_link_libraries(Alice PRIVATE dxguid dxgi d3d12)
    target_compile_definitions(Alice PRIVATE WIN32_LEAN_AND_MEAN= _UNICODE= alice_windows=)
    target_compile_options(Alice PRIVATE -municode)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    find_package(Vulkan REQUIRED)
    add_executable(Alice)
    target_link_libraries(Alice PRIVATE Vulkan::Vulkan)
    target_compile_definitions(Alice PRIVATE alice_linux=)
else()
    message(FATAL_ERROR "Unsupported system: ${CMAKE_SYSTEM_NAME}. Alice currently supports Windows, Linux, and macOS.")
endif()
string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" ARCH_LOWER)
if(ARCH_LOWER MATCHES "^(x86_64|amd64)$")
    target_compile_definitions(Alice PRIVATE alice_amd64=)
elseif(ARCH_LOWER MATCHES "^(aarch64|arm64)$")
    target_compile_definitions(Alice PRIVATE alice_arm64=)
elseif(ARCH_LOWER MATCHES "^(riscv64)$")
    target_compile_definitions(Alice PRIVATE alice_riscv64=)
else()
    message(FATAL_ERROR "Unknown architecture: ${CMAKE_SYSTEM_PROCESSOR}. Alice only recognizes amd64, arm64, and riscv64")
endif()
target_compile_definitions(Alice PRIVATE alice_major=0 alice_middle=0 alice_minor=1)
target_include_directories(Alice PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Source")
target_compile_features(Alice PRIVATE cxx_std_26)
target_compile_options(Alice PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    if(CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "GNU")
        target_compile_options(Alice PRIVATE -Wno-dollar-in-identifier-extension)
    else()
        message(FATAL_ERROR "Unsupported Clang's front-end variant: ${CMAKE_CXX_COMPILER_FRONTEND_VARIANT}. Alice currently supports GNU Clang.")
    endif()
else()
    message(FATAL_ERROR "Unsupported C++ compiler: ${CMAKE_CXX_COMPILER_ID}. Alice currently supports GNU GCC or GNU Clang.")
endif()
get_property(ALICE_MULTI GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
if(ALICE_MULTI)
    target_compile_definitions(Alice PRIVATE $<$<CONFIG:Debug>:alice_debug=>)
    target_compile_options(Alice PRIVATE $<$<CONFIG:Debug>:-g -O0> $<$<CONFIG:Release>:-O3>)
    target_link_options(Alice PRIVATE $<$<CONFIG:Debug>:-g>)
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
        target_compile_options(Alice PRIVATE $<$<CONFIG:Release>:-flto>)
        target_link_options(Alice PRIVATE $<$<CONFIG:Release>:-flto>)
    else()
        target_compile_options(Alice PRIVATE $<$<CONFIG:Release>:-flto=full>)
        target_link_options(Alice PRIVATE $<$<CONFIG:Release>:-flto=full>)
    endif()
elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(Alice PRIVATE alice_debug=)
    target_compile_options(Alice PRIVATE -g -O0)
    target_link_options(Alice PRIVATE -g)
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    target_compile_options(Alice PRIVATE -O3)
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
        target_compile_options(Alice PRIVATE -flto)
        target_link_options(Alice PRIVATE -flto)
    else()
        target_compile_options(Alice PRIVATE -flto=full)
        target_link_options(Alice PRIVATE -flto=full)
    endif()
else()
    message(FATAL_ERROR "Unsupported configuration. Alice currently supports Debug and Release.")
endif()
file(GLOB_RECURSE ALICE_EDITOR_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Editor/*.cpp")
file(GLOB_RECURSE ALICE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp")
target_sources(Alice PRIVATE ${ALICE_EDITOR_SOURCES} ${ALICE_SOURCES})
get_filename_component(ALICE_MAIN "${CMAKE_CURRENT_SOURCE_DIR}/Source/Alice.cpp" ABSOLUTE)
list(REMOVE_ITEM ALICE_SOURCES "${ALICE_MAIN}")
file(GLOB_RECURSE ALICE_TESTS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Test/*.cpp")
get_filename_component(ALICE_TEST_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Test" ABSOLUTE)
set(ALICE_TESTING "")
enable_testing()
foreach(ALICE_TEST_FILE ${ALICE_TESTS})
    file(RELATIVE_PATH REL_PATH ${ALICE_TEST_PATH} "${ALICE_TEST_FILE}")
    string(REPLACE "/" "_" TARGET_NAME "${REL_PATH}")
    string(REPLACE "." "_" TARGET_NAME "${TARGET_NAME}")
    set(ALICE_TEST_NAME "ALICE_TEST_${TARGET_NAME}")
    if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
        set(ALICE_CLEAN ${ALICE_CLEAN} && rm -rf "${CMAKE_BINARY_DIR}/${ALICE_TEST_NAME}.app/Contents/Resources")
        add_executable(${ALICE_TEST_NAME} MACOSX_BUNDLE ${ALICE_MACOS_RESOURCES} ${ALICE_METAL_SHADERS} ${ALICE_OBJCPP_SOURCES} ${ALICE_SOURCES} ${ALICE_TEST_FILE})
        set_target_properties(${ALICE_TEST_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/Info.plist")
        target_link_libraries(${ALICE_TEST_NAME} PRIVATE ${foundation} ${appkit} ${quartzcore} ${metal})
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_darwin=)
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
        add_executable(${ALICE_TEST_NAME} WIN32 ${ALICE_SOURCES} ${ALICE_TEST_FILE})
        target_link_libraries(${ALICE_TEST_NAME} PRIVATE dxguid dxgi d3d12)
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE WIN32_LEAN_AND_MEAN= _UNICODE= alice_windows=)
        target_compile_options(${ALICE_TEST_NAME} PRIVATE -municode)
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
        add_executable(${ALICE_TEST_NAME} ${ALICE_SOURCES} ${ALICE_TEST_FILE})
        target_link_libraries(${ALICE_TEST_NAME} PRIVATE Vulkan::Vulkan)
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_linux=)
    else()
        message(FATAL_ERROR "Unsupported system: ${CMAKE_SYSTEM_NAME}. Alice currently supports Windows, Linux, and macOS.")
    endif()
    if(ARCH_LOWER MATCHES "^(x86_64|amd64)$")
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_amd64=)
    elseif(ARCH_LOWER MATCHES "^(aarch64|arm64)$")
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm64=)
    elseif(ARCH_LOWER MATCHES "^(riscv64)$")
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_riscv64=)
    else()
        message(FATAL_ERROR "Unknown architecture: ${CMAKE_SYSTEM_PROCESSOR}. Alice only recognizes amd64, arm64, and riscv64")
    endif()
    target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_major=0 alice_middle=0 alice_minor=1)
    target_include_directories(${ALICE_TEST_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Source")
    target_compile_features(${ALICE_TEST_NAME} PRIVATE cxx_std_26)
    target_compile_options(${ALICE_TEST_NAME} PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions)
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        if(CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "GNU")
            target_compile_options(${ALICE_TEST_NAME} PRIVATE -Wno-dollar-in-identifier-extension)
        else()
            message(FATAL_ERROR "Unsupported Clang's front-end variant: ${CMAKE_CXX_COMPILER_FRONTEND_VARIANT}. Alice currently supports GNU Clang.")
        endif()
    else()
        message(FATAL_ERROR "Unsupported C++ compiler: ${CMAKE_CXX_COMPILER_ID}. Alice currently supports GNU GCC or GNU Clang.")
    endif()
    if(ALICE_MULTI)
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:alice_debug=>)
        target_compile_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:-g -O0> $<$<CONFIG:Release>:-O3>)
        target_link_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:-g>)
        if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
            target_compile_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto>)
            target_link_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto>)
        else()
            target_compile_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto=full>)
            target_link_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto=full>)
        endif()
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_debug=)
        target_compile_options(${ALICE_TEST_NAME} PRIVATE -g -O0)
        target_link_options(${ALICE_TEST_NAME} PRIVATE -g)
    elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(${ALICE_TEST_NAME} PRIVATE -O3)
        if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
            target_compile_options(${ALICE_TEST_NAME} PRIVATE -flto)
            target_link_options(${ALICE_TEST_NAME} PRIVATE -flto)
        else()
            target_compile_options(${ALICE_TEST_NAME} PRIVATE -flto=full)
            target_link_options(${ALICE_TEST_NAME} PRIVATE -flto=full)
        endif()
    else()
        message(FATAL_ERROR "Unsupported configuration. Alice currently supports Debug and Release.")
    endif()
    add_test(NAME ${ALICE_TEST_FILE} COMMAND ${ALICE_TEST_NAME})
    list(APPEND ALICE_TESTING ${ALICE_TEST_NAME})
endforeach()
add_custom_target(clean_app COMMAND ${CMAKE_COMMAND} -E ${ALICE_CLEAN})
add_custom_target(ALICE_RUN_TESTS ALL COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_dependencies(ALICE_RUN_TESTS ${ALICE_TESTING})